finished final pages

--- a/app/src/main/res/layout/activity_finalpoll.xml
+++ b/app/src/main/res/layout/activity_finalpoll.xml
@@ -68,7 +68,7 @@
         android:id="@+id/voteFinalPoll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -99,15 +99,26 @@
         android:id="@+id/btnSubmitFinal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="36dp"
         android:background="@color/colorAccent"
-        android:text="Submit"
+        android:text="Submit The Poll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/voteFinalPoll" />
 
-<!--    <TextView-->
+    <Button
+        android:id="@+id/btnShowFinalGraph"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="@color/colorPrimary"
+        android:text="Show Graph"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSubmitFinal" />
+
+    <!--    <TextView-->
 <!--        android:id="@+id/textView4"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
